[package]
name = "osclientcerts"
version = "0.1.2"
authors = ["Dana Keeler <dkeeler@mozilla.com>"]
edition = "2018"
description = "Platform-specific support for client authentication certificates in Firefox"
repository = "https://github.com/mozkeeler/osclientcerts"
license = "MPL-2.0"

[dependencies]
byteorder = "1.3.2"
env_logger = "0.6"
lazy_static = "1"
log = "0.4"
sha2 = "0.8"

[target.'cfg(target_os = "macos")'.dependencies.core-foundation]
version = "0.6"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["wincrypt"]

[build-dependencies]
bindgen = "^0"

[lib]
crate-type = ["cdylib"]
