[package]
name = "osclientcerts-macos"
version = "0.1.0"
authors = ["Dana Keeler <dkeeler@mozilla.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
core-foundation = "0.6"
env_logger = "0.6"
log = "0.4"
osclientcerts-der = { path = "../osclientcerts-der" }
osclientcerts-types = { path = "../osclientcerts-types" }

[build-dependencies]
bindgen = "0.49"
