[package]
name = "osclientcerts-module"
version = "0.1.0"
authors = ["Dana Keeler <dkeeler@mozilla.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
env_logger = "0.6"
lazy_static = "1"
log = "0.4"
osclientcerts-types = { path = "../osclientcerts-types" }

[target.'cfg(target_os = "macos")'.dependencies.osclientcerts-macos]
path = "../osclientcerts-macos"

[lib]
name = "osclientcerts"
crate-type = ["cdylib"]
