[package]
name = "osclientcerts-windows"
version = "0.1.0"
authors = ["Dana Keeler <dkeeler@mozilla.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
env_logger = "0.6"
log = "0.4"
osclientcerts-types = { path = "../osclientcerts-types" }
winapi = { version = "0.3.7", features = ["wincrypt"] }

[build-dependencies]
bindgen = "0.49"
